# nikw

./: README.md  ROADMAP.md  propagate_versionnumber.py  pyproject.toml  tests.sh
nikw/: aboutproject.py  hashfuncs.py  nikw.py  utils.py
nikw/game/: baseclasses.py  baseclasses_2Dboardint.py  baseclasses_2Drectint.py  baseclasses_gomokunarabeNxN_S_Pplayers.py  constants.py  utils.py
nikw/game/gamerules/: gamerules.py
nikw/game/gamerules/gomokunarabe_19x19_2p_5_boardimp1/: game.py
nikw/game/gamerules/gomokunarabe_19x19_2p_5_boardimp2/: game.py
nikw/game/gamerules/gomokunarabe_19x19_5_2p_boardimp1/: game.py
tests/: gomokunarabe19x19_5_2players.1.iaswn  gomokunarabe19x19_5_2players.2.iaswn  gomokunarabe19x19_5_2players.3.iaswn  gomokunarabe19x19_5_2players.4.iaswn  gomokunarabe19x19_5_2players.5.iaswn  gomokunarabe19x19_5_2players.6.iaswn  gomokunarabe19x19_5_2players.py
