[tool.poetry]
name = "nikw"
version = "0.0.1"
description = ""
authors = ["suizokukan <suizokukan@orange.fr>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "3.10"
urwid = "^2.1.2"
python-socketio = "^5.5.2"
aiohttp = "^3.8.1"
requests = "^2.27.1"
exc-motherclass = "^0.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
